--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <title>Falcon_Fuzz</title>
 </head>
 <h2 id='smt-fuzz'>Falcon-Fuzz</h2>
-<body>Note: the 'statu' is a bit different from our draft. 'confirmed + fixed' in this page means `confirmed' in the draft
+<body>Note: the 'status' is a bit different from our draft. 'confirmed + fixed' in this page means `confirmed' in the draft
+ In "CVC4/ID" or "Z3/ID", the "ID" is the GitHub issue ID.
 <h3 id='cvc'>CVC4</h3> 
  <ul id='cvc-bugs'><li><a>CVC4/4771 Status: fixed Type: correctness #Options: 0
 </a></li>
