--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </style>
 </head>
 <body>
-        Note: the 'status' column is a bit different from our draft. 'confirmed + fixed' in this page means `confirmed' in the draft
+        Note: the 'status' column is a bit different from our draft. `confirmed' in the draft is equivalent to 'confirmed + fixed' in this page.
+ `reported' in the draft is equivalent to the sum of all categories in this page.
+    
     <h3>Z3:<h3>
     <table class="tg">
         <thead>
